# sketchbook-ng

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json
public/: index.html  index.js  style.css
src/: initial.rs  lib.rs
src/common/: colors.rs  dom.rs  mat3.rs  mod.rs  plotter.rs  utils.rs  vec2.rs  vec3.rs
src/interop/: events.rs
src/math/: mod.rs  vec3.rs
src/plotter/: mod.rs
src/sketches/: colors.rs  events.rs  initial.rs  mod.rs  plotter_example.rs  sketch.rs
